<resources>
    <string name="app_name">MyBudget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="expense_title">cine</string>
    <string name="expense_amount">7.5</string>
    <string name="coin">€</string>
    <string name="total_budget_amount_hint">600</string>
    <string name="new_expense_title_hint">New expense title</string>
    <string name="new_expense_description_hint">New expense description</string>
    <string name="new_expense_amount_hint">New expense Amount</string>
    <string name="save_expense">Save Expense</string>
    <string name="delete_icon_content_description">remove icon</string>
    <string name="preferences_max_amount">Max Amount To Expend</string>
    <string name="save_preferences">Save</string>
    <string name="max_amount_hint">500</string>
</resources>
