<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_expense_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_expense_title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_expense_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_expense_description_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_expense_amount_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_expense_amount_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/save_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_expense" />

</LinearLayout>
