<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/five_dp">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/expense_title" />

    <TextView
        android:id="@+id/amount_textView"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/expense_amount" />

    <ImageView
        android:id="@+id/remove_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/five_dp"
        android:contentDescription="@string/delete_icon_content_description"
        android:background="@drawable/ic_remove_expense" />

</LinearLayout>
